# high-quality-ellipse-detection

./: .gitignore.txt  CMakeLists.txt  Cluster.h  Gradient.h  HelperFunctions.h  LineSegment.h  MagicNumbers.h  NFA.h  README.md  Region.h  Structs.h  ellipseDetectionByArcSupportLSs.m  fitEllipse.m  generateEllipseCandidates.cpp  testing.txt
